Fix header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -26,17 +26,12 @@ input {
     background-color: #00B9ED;
     height: 4.167em;
     border-bottom: 0px;
-    padding-left: auto;
-    padding-right: auto;
     width: 100%;
 }
 
 #wrapper {
-    margin-left: auto;
-    margin-right: auto;
-    width: 100em;
-    padding-top: 0px;
-    padding-bottom: 0px;
+    padding-left: 4.1em;
+    padding-right: 3em;
 
     display: flex;
     flex-direction: row;
